--- a/index.css
+++ b/index.css
@@ -26,7 +26,6 @@
 
 .firstpage {
     background: url("bg.png");
-    /* background-size: 1200px; */
     background-repeat: no-repeat;
     height: 1000px;
     width: 1440px;
@@ -154,6 +153,11 @@ nav>h1 {
     align-items: center;
     justify-content: center;
     height: 300px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
 }
 
 .card1 img{ 
@@ -178,28 +182,7 @@ nav>h1 {
     -ms-transform: rotate(180deg);
     -o-transform: rotate(180deg);
 }
-/* .card2 img{ 
-    position: relative;
-} */
 
-/* .card2box {
-    position: absolute; */
-    /* left: 450px; */
-    /* top: 1280px; */
-    /* height: 61px;
-    width: 58px;
-    background-color: rgba(251, 235, 188, 1);
-    border-radius: 24px 7px 13px 7px;
-    -webkit-border-radius: 24px 7px 13px 7px;
-    -moz-border-radius: 24px 7px 13px 7px;
-    -ms-border-radius: 24px 7px 13px 7px;
-    -o-border-radius: 24px 7px 13px 7px;
-    transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-} */
 .card3 img{ 
     position: relative;
 }
@@ -293,9 +276,21 @@ nav>h1 {
 .cardone{
     margin-right: 110px;
 }
-.cardtwo{
-    margin-right: 110px;
+
+.cardall .cardone{
+    margin: 10px;
+    align-items: center;
+    justify-content: center;
 }
+
+.cardtwo .card{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: auto;
+    gap: 15px;
+}
+
 .cardthree{
     margin-right: 70px;
 }
@@ -404,14 +399,16 @@ nav>h1 {
     line-height: 22px;
 }
 
-.fourright {
-    /* margin-top: 100px; */
-}
-
 .fourright .card {
-    padding: 10px;
-    /* border: 1px; */
-    border: 1.33px solid rgba(132, 130, 154, 1)
+    padding: 20px;
+    border: 1.33px solid rgba(132, 130, 154, 1);
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px #888888;
+    margin-right: 20px;
 }
 
 .fourright .cardall {
@@ -420,10 +417,8 @@ nav>h1 {
 
 .fourright .trip {
     font-family: 'Poppins', sans-serif;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 30px;
-    letter-spacing: 0.015em;
+    font-size: 21px;
+    letter-spacing: 1.5%;
 }
 
 .cardone1 {
@@ -434,6 +429,7 @@ nav>h1 {
     font-weight: 500;
     line-height: 26px;
     letter-spacing: -0.005em;
+    color:rgba(132, 130, 154, 1);
 }
 
 .cardone1 .cardone114 {
